2020-09-07 catering.py purchasing supplier linking released by viewing all orders and viewing to order.
2020-09-08 catering.py error purchase suppliernr repaired by selecting orders supplier.
2020-09-09 catering.py import loss changed for booking expired items on table loss category Obsolete.
2020-09-09 catering.backup, empty_catering.backup and full_catering.backup removed foreignkey link with table articles, 
           for possibility booking on table loss for deleted items.
2020-09-09 backups table loss extended with field item_price
2020-09-10 catering.py request loss and book loss articles added fields item_price and description for uncoupling foreignkey articles
2020-09-10 catering.backup and empty_catering.backup and full_catering.backup database changed due to adding fields item_price and description
2020-09-10 catering.py in display heading callname employee showed for switching between employees.
2020-09-13 full_catering.backup some buttons text applied
2020-09-13 catering.py by seatsArrange removed evenb seats occurences, for problems counting even occurences between several clients and callnames.
2020-09-14 catering.py bug solved by switching clients between same employee by applying first line of articles.
2020-09-15 catering.py thoroughly tested with seats tables, seems to operate smoothly now!
2020-09-17 full_catering.backup in table tables_layout removed unused column barcodeID
2020-09-17 catering.py in module seatsArrange unused tablelist list removed
2020-09-17 catering.py gatering orderlines by switching employee fixed
2020-09-18 catering.py disabled scanning products after switching employee clients before selecting switched employee and client.
2020-09-18 catering.py assigned definitions to module changeArticle ordering_manual and supplierID.
2020-09-18 full_catering.backup added loss items and avery label as example insert for commercial barcode.
2020-09-19 catering.py corrected type error in info
